# newsletters

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  start-postgres.sh
.github/: copilot-instructions.md
context/: detailed_interview_system_vision.md  initial_brainstorming.txt  interview_system_project_notes.txt  rag_setup_guide.md
sample_team/: functional_groups.yml  q2_okrs.yml  team_members.yml
src/newsletters/: cli.py  interview_rag.py  models.py  rag.py
